# grishuk.co.il

./: .dockerignore  .gitignore  CLAUDE.md  CNAME  CODE_REVIEW.md  Dockerfile  README.md  add_post.py  alembic.ini  docker-compose.yml  index.html  main.py  manage_projects.py  models.py  pyproject.toml  requirements.txt  slug_utils.py  styles.css  test_code.py  tree.txt
admin/: auth.py  routes.py
alembic/: env.py
alembic/versions/: 3c81e6c3abe1_add_tags_and_posts.py  6e73f887c080_add_meta_title_column_to_posts_table.py  705105302e06_add_post_content.py  7085c0c5e405_add_slug_table_to_posts.py  a1b2c3d4e5f6_add_admin_users_table.py  cd39809ede78_create_projects_table.py  d0214321f5ed_drop_projects_table.py  dd4568bbf8f6_add_post_content.py  edfc4746a39f_temporary_remove_post_content.py
db_utils/: database.py  models.py
markdown_content/: beyond_cookies.md  post_beyond_cookies.md  post_ddos_protection.md  post_nmap_default_setup_on_kali.md  post_open_source_website_protection.md  project_dark_scan.md
nginx/: nginx.conf
posts/: systemd-service-hardening-introduction.html
site_utils/: create_admin.py  manage_content.py  manage_projects.py  sitemap_generator.py
static/: main.js  sitemap.xml  styles.css
templates/: 404.html  base.html  home.html  post.html
templates/admin/: base.html  base_login.html  dashboard.html  login.html  post_form.html  tags.html
templates/examples/: cpu_and_memory.html  display_info.html  (+4 more)
tests/: conftest.py  test_admin_auth.py  test_admin_crud.py  test_models.py  test_renderer.py  test_routes.py  test_slugify.py
