[project]
name = "grishuk-co-il"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.123.9",
    "alembic==1.16.5",
    "uvicorn==0.38.0",
    "gunicorn==23.0.0",
    "psycopg[binary]==3.2.13",
    "python-dotenv==1.2.1",
    "markdown2==2.5.4",
    "mistune==3.1.4",
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    "bcrypt==4.3.0",
    "slowapi==0.1.9",
    "itsdangerous==2.2.0",
    "python-multipart",
    "jinja2",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
